# Crucible_AgentEnvironment

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: SKILL (1).md
data-visualization-creator-1.0.0/: SKILL.md
demo/secretless-proxy/: README.md  agent.py  demo.sh  fake_api.py  proxy.py
docs/: architecture.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: LaunchForm.tsx  PlaneStrip.tsx  Reveal.tsx  TerminalFeed.tsx  WorkspaceView.tsx
frontend/src/hooks/: useTrace.ts
frontend/src/lib/: api.ts  experiment.ts  plain.ts  utils.ts
frontend/src/pages/: Console.tsx  Landing.tsx
src/agent_workspaces/: __init__.py  config.py  main.py  models.py  orchestrator.py
src/agent_workspaces/api/: __init__.py  routes.py
src/agent_workspaces/control/: __init__.py  intent.py  scheduler.py  shapes.py  warm_pool.py
src/agent_workspaces/data/: __init__.py  branching.py  health.py  provisioner.py
src/agent_workspaces/execution/: __init__.py  agent.py  filesystem.py  mcp.py  runtime.py  sandbox.py
src/agent_workspaces/experiment/: __init__.py  docker_runner.py  grader.py  runner.py  scripted.py  tasks.py
src/agent_workspaces/security/: __init__.py  audit.py  credential_proxy.py  isolation.py  network_policy.py  (+2 more)
tests/: conftest.py  test_api.py  test_broker_fetch.py  test_control.py  test_data.py  test_experiment.py  test_lifecycle.py  test_security.py  test_trace_store.py
(+20 files in other folders)
